-- initial project -- implementasi login

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Test Interview Java</string>
+    <string name="app_name">Interview Java</string>
 
     <string name="baseURL"></string>
 
